<resources>
    <string name="app_name">Colocviu1_1</string>
    <string name="navigate_to_secondary_activity">Navigate to Secondary Activity</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="north">North</string>
    <string name="current_inputs">Current inputs:</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
</resources>