<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Colocviu1_1SecondaryActivity">

    <TextView
        android:id="@+id/current_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_inputs"
        android:textAlignment="center"
        android:layout_margin="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:textAlignment="center"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:layout_margin="4dp"/>
    </LinearLayout>
</LinearLayout>